--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "plantr api",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrew Dickinson",
